<resources>
    <string name="app_name">5 ciekawostek o robotach</string>

    <string name="menu_item1">Ciekawostka 1</string>

    <string name="menu_item2">Ciekawostka 2</string>

    <string name="menu_item3">Ciekawostka 3</string>

    <string name="menu_item4">Ciekawostka 4</string>

    <string name="menu_item5">Ciekawostka 5</string>

    <string name="fact1_title">Skąd wzięło się słowo \"robot\"?</string>

    <string name="fact1_content">Słowo robot pochodzi od słowiańskiego słowa \"robota\", oznaczającego ciężką pracę, wysiłek. Upowszechniło się ono po wydaniu sztuki R.U.R. (Rossumovi Univerzální Roboti) której autorem jest czeski pisarz Karel Čapek. Mimo iż pierwotnie odnosiło się ono do żywych istot – sztucznie produkowanej, uproszczonej wersji człowieka przeznaczonej do ciężkiej pracy, obecnie słowo to oznacza przede wszystkim urządzenia mechaniczne. Termin robot został jednak wykuty przez pisarza Josefa, który jest bratem Karela.</string>

    <string name="i_know_this">Wiem to!</string>

    <string name="fact2_title">Prawa robotyki Asimowa</string>

    <string name="fact2_content">
    W 1942 roku pisarz Isaak Asimow stworzył trzy prawa robotów i przedstawił je w opowiadaniu Zabawa w berka (ang. Runaround). Celem tych praw było uregulowanie kwestii stosunków pomiędzy przyszłymi myślącymi maszynami a ludźmi. Prawa te brzmiały następująco:\n\n
    1. Robot nie może skrzywdzić człowieka, ani przez zaniechanie działania dopuścić, aby człowiek doznał krzywdy.\n\n
2. Robot musi być posłuszny rozkazom człowieka, chyba że stoją one w sprzeczności z Pierwszym Prawem.\n\n
3. Robot musi chronić sam siebie, jeśli tylko nie stoi to w sprzeczności z Pierwszym lub Drugim Prawem.
    </string>

    <string name="fact3_title">Robot vs Android vs Cyborg</string>
    <string name="fact3_content">
        Istnieje kilka określeń na istoty, które mieszczą się w ogólnej definicji robota.\n\n
        Android to robot humanoid, czyli mechaniczne urządzenie wykonujące automatycznie pewne zadania, którego kształt przypomina ludzkie ciało.\n\n
        Cyborg to organizm, którego procesy życiowe realizowane są lub wspomagane przez urządzenia techniczne.\n\n
        Słowo robot obecnie oznacza właściwie wszystkie mechaniczne urządzenia wykonujące automatycznie pewne zadania.
    </string>

    <string name="fact4_title">Filmy</string>
    <string name="fact4_content">
        Filmy poruszające tematykę sztucznej inteligencji lub humanoidalnych robotów (lista niewyczerpująca):\n\n
        Metropolis (1927)\n
        2001: Odyseja kosmiczna (1968)\n
        Gwiezdne wojny (1977)\n
        Blade Runner (1982)\n
        Ja, robot (2004)\n
        Interstellar (2014)\n
        Ex Machina (2015)
    </string>

    <string name="fact5_title">AlphaGo</string>
    <string name="fact5_content">
        Jednym z ważnych wydarzeń związanych z rozwojem badań nad sztuczną inteligencją był mecz Go pomiędzy Lee Sedol\'em a programem o nazwie AlphaGo, rozwijanym przez Google.\n\n
        Mecz ten odbył się Seulu, w dniach 9-15 marca 2016 roku.\n\n
        Go przez wiele lat było uznawane za grę, której nie będzie w stanie opanować żadna maszyna. W przeciwieństwie do szachów, gdzie optymalne otwarcia partii są już od lat rozpracowane na wiele ruchów do przodu, w go liczba możliwych odgałęzień jest tak duża, że nie sposób wyuczyć się ich na pamięć, czy – w przypadku komputera – bazować na stosunkowo prostych algorytmach.
    </string>

    <string name="congrats">Gratulacje! Teraz wiesz już wszystko.</string>

</resources>
