<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.piecciekawostekorobotach.SubActivity"
        android:orientation="vertical">

        <TextView android:id="@+id/title"
            style="@style/Heading"
            android:text="@string/fact2_title"/>

        <ImageView android:id="@+id/illustration"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_margin="12dp"
            android:padding="0dp"
            />

        <TextView android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Paragraph"
            android:text="@string/fact2_content"
            />

        <CheckBox android:id="@+id/i_know_this_checkbox"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_know_this"
            android:onClick="saveCheck"
            />

    </LinearLayout>
</ScrollView>