<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.piecciekawostekorobotach.MainActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.1">
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.8">

                <!-- 70% width begin -->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button android:id="@+id/btn1"
                        android:text="@string/menu_item1"
                        android:onClick="openFact"
                        style="@style/MenuButton">
                    </Button>
                    <Button android:id="@+id/btn2"
                        android:text="@string/menu_item2"
                        android:onClick="openFact"
                        style="@style/MenuButton">
                    </Button>
                    <Button android:id="@+id/btn3"
                        android:text="@string/menu_item3"
                        style="@style/MenuButton">
                    </Button>
                    <Button android:id="@+id/btn4"
                        android:text="@string/menu_item4"
                        style="@style/MenuButton">
                    </Button>
                    <Button android:id="@+id/btn5"
                        android:text="@string/menu_item5"
                        style="@style/MenuButton">
                    </Button>

                </LinearLayout>
                <!-- 70% width end -->

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.1">
            </RelativeLayout>

        </LinearLayout>

        <TextView android:id="@+id/congrats"
            style="@style/Congrats"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <WebView
                    android:id="@+id/webView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>